k8s/05-statistics-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statistics-service
  labels:
    app: statistics-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statistics-service
  template:
    metadata:
      labels:
        app: statistics-service
    spec:
      containers:
      - image: mjsasha/statistics-service
        name: statistics-service
        ports:
          - containerPort: 8080
