k8s/03-kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-svc
spec:
  type: ClusterIP
  selector:
    app: kafka
  ports:
    - port: 9092
      targetPort: 9092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  labels:
    app: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - image: wurstmeister/kafka
        name: kafka
        ports:
          - name: kafka
            containerPort: 9092
