k8s/06-lessons-files-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: lessons-files-svc
spec:
  type: ClusterIP
  selector:
    app: lessons-files-service
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lessons-files-service
  labels:
    app: lessons-files-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lessons-files-service
  template:
    metadata:
      labels:
        app: lessons-files-service
    spec:
      containers:
      - image: mjsasha/lessons-files-service
        name: lessons-files-service
        ports:
          - containerPort: 8080
